# mrxiaozhuox.github.io

./: 404.html  CNAME  Cargo.toml  Dioxus.toml  README.md  karaty.toml
.github/workflows/: main.yml
assets/dioxus/: dioxus-starter.js  dioxus-starter_bg.wasm
assets/dioxus/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
config/: routing.toml
src/: main.rs
src/components/: footer.rs  nav.rs
src/pages/: blog.rs  mod.rs
